--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -91,7 +91,11 @@ jobs:
           mkdir -p release_gems
           for gem in artifacts/distributing_iterator-*.gem/*.gem; do
             platform=$(basename $gem | sed -E 's/distributing_iterator-([^.]+)\.gem/\1/')
-            mv "$gem" "release_gems/distributing_iterator-${platform}-${GEM_VERSION}.gem"
+
+            # Construct the target filename: NAME-VERSION-PLATFORM.gem
+            target_filename="distributing_iterator-${GEM_VERSION}-${platform}.gem"
+            target_path="release_gems/$target_filename"
+            mv "$gem" "$target_path"
           done
           # Move source gem to release_gems directory
           mv artifacts/distributing_iterator.gem/*.gem release_gems/distributing_iterator-${GEM_VERSION}.gem
